wf-details: fix long step name wrapping issue
closes #247

--- a/reana-ui/src/pages/workflowDetails/components/WorkflowLogs.module.scss
+++ b/reana-ui/src/pages/workflowDetails/components/WorkflowLogs.module.scss
@@ -2,11 +2,17 @@
   -*- coding: utf-8 -*-
 
   This file is part of REANA.
-  Copyright (C) 2020 CERN.
+  Copyright (C) 2020, 2022 CERN.
 
   REANA is free software; you can redistribute it and/or modify it
   under the terms of the MIT License; see LICENSE file for more details.
 */
+
+@mixin ellipsized {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
 .logs {
   height: 55vh;
@@ -16,12 +22,21 @@
   margin: 0;
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
-  line-height: 22px;
+  line-height: 1.6em;
+  height: 40px;
 }
 
 :global(.ui.selection.dropdown).dropdown {
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
+  top: 4px;
+  line-height: 1.2em;
+  height: 40px;
+
+  > div {
+    max-width: 250px;
+    @include ellipsized;
+  }
 }
 
 .step-info {
@@ -33,10 +48,8 @@
   display: flex;
   margin: 1em;
 
-  .ellipsized {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 300px;
+  .label {
+    max-width: 270px;
+    @include ellipsized;
   }
 }
